CodeTemplateHelperImpl