@@ -18,6 +18,22 @@
         <ikonli.icons.version>2.4.0</ikonli.icons.version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        @{argLine}
+                        --add-opens javamm.ide/academy.devonline.javamm.ide.component.impl=ALL-UNNAMED
+
+                        --add-exports javafx.base/com.sun.javafx.beans=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>academy.devonline</groupId>
